// Copyright (c) 2017-2020 VMware, Inc. or its affiliates
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package idl;

import "cli_to_hub.proto";

service Agent {
  rpc CheckDiskSpace (CheckSegmentDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
  rpc UpgradePrimaries (UpgradePrimariesRequest) returns (UpgradePrimariesReply) {}
  rpc RenameDirectories (RenameDirectoriesRequest) returns (RenameDirectoriesReply) {}
  rpc StopAgent (StopAgentRequest) returns (StopAgentReply) {}
  rpc DeleteDataDirectories (DeleteDataDirectoriesRequest) returns (DeleteDataDirectoriesReply) {}
  rpc DeleteStateDirectory (DeleteStateDirectoryRequest) returns (DeleteStateDirectoryReply) {}
  rpc DeleteTablespaceDirectories (DeleteTablespaceRequest) returns (DeleteTablespaceReply) {}
  rpc ArchiveLogDirectory (ArchiveLogDirectoryRequest) returns (ArchiveLogDirectoryReply) {}
  rpc RsyncDataDirectories (RsyncRequest) returns (RsyncReply) {}
  rpc Rsync (RsyncRequest) returns (RsyncReply) {}
  rpc RestorePrimariesPgControl (RestorePgControlRequest) returns (RestorePgControlReply) {}
}

message TablespaceInfo {
  string Name = 3;
  string Location = 4;
  bool UserDefined = 5;
}

message UpgradePrimariesRequest {
    string SourceBinDir = 1;
    string TargetBinDir = 2;
    string TargetVersion = 3;
    repeated DataDirPair DataDirPairs = 4;
    bool CheckOnly = 5;
    bool UseLinkMode = 6;
    string MasterBackupDir = 7;
    string TablespacesMappingFilePath = 8;
}

message DataDirPair {
    string SourceDataDir = 1;
    string TargetDataDir = 2;
    int32  SourcePort    = 3;
    int32  TargetPort    = 4;
    int32  Content    = 5;
    int32  DBID       = 6;
    map<int32, TablespaceInfo> Tablespaces = 7;
}

message UpgradePrimariesReply {}

message DeleteDataDirectoriesRequest {
  repeated string datadirs = 1;
}
message DeleteDataDirectoriesReply {}

message DeleteStateDirectoryRequest {}
message DeleteStateDirectoryReply {}

message DeleteTablespaceRequest {
  repeated string dirs = 1;
}
message DeleteTablespaceReply {}

message ArchiveLogDirectoryRequest {
    string NewDir = 1;
}
message ArchiveLogDirectoryReply {}

message RenameDirectories {
  string Source = 1;
  string Target = 2;
  bool RenameTarget = 3;
}

message RenameDirectoriesRequest {
  repeated RenameDirectories Dirs = 1;
}

message RenameDirectoriesReply {}

message StopAgentRequest {}
message StopAgentReply {}

message CheckSegmentDiskSpaceRequest {
    CheckDiskSpaceRequest request = 1;
    repeated string datadirs = 2;
}

message RsyncPair {
    string Source = 1;
    string DestinationHost = 2;
    string Destination = 3;
}

message RsyncRequest {
    repeated string Options = 1;
    repeated string Excludes = 2;
    repeated RsyncPair Pairs = 3;
}

message RsyncReply {}

message RestorePgControlRequest {
  repeated string datadirs = 1;
}

message RestorePgControlReply {}
